Bug 97922 - Customize Toolbar Change Icon List does not show spin buttons
Summary: Customize Toolbar Change Icon List does not show spin buttons
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.2
Keywords:
: 96656 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-02-17 06:17 UTC by Ashok
Modified: 2016-10-25 19:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shot of Change Icon window (40.99 KB, image/jpeg)
2016-02-17 06:17 UTC, Ashok
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ashok 2016-02-17 06:17:07 UTC
Created attachment 122712 [details]
Screen shot of Change Icon window

In the Change Icon window (Customize Toolbar -> Toolbar Contents Commands -> Modify -> Change Icon) the list shows only first set of Icons.  The slider (on the left) to move to the next / previous set of Icons is missing in the windows - So, cannot move to next set of Icons.
Comment 1 Buovjaga 2016-02-17 13:26:08 UTC
Does disabling this help: Tools - Options - LibO - View - Use OpenGL for all rendering
Comment 2 Ashok 2016-02-17 13:44:36 UTC
Disabling Use OpenGL for all rendering in Tools - Options - LibO - View solves the problem
Thanks
Comment 3 Buovjaga 2016-02-17 13:47:35 UTC
Very cool.. please paste here in a comment the contents of this file in your system:
C:\Users\Ashok\AppData\Roaming\LibreOffice\4\cache\opengl_device.log
Comment 4 Ashok 2016-02-17 13:57:45 UTC
The contents of the file opengl_device.log is

DriverVersion: 10.18.15.4248
DriverDate: 8-4-2015
DeviceID: PCI\VEN_8086&DEV_0A16&SUBSYS_08661025&REV_0B
AdapterVendorID: 0x8086
AdapterDeviceID: 0x0a16
AdapterSubsysID: 0x08661025
DeviceKey: System\CurrentControlSet\Control\Video\{3076AA71-448E-4AB1-9F29-774D3BEA66C6}\0000
DeviceString: Intel(R) HD Graphics Family
Comment 5 Michael Meeks 2016-02-17 14:44:08 UTC
Confirmed; I guess a luna theming issue.
Comment 6 Ashok 2016-02-17 14:48:13 UTC
this issue was found on Windows 10 32 and 64 bit pcs.  Will check if the issue is there in other versions of windows
Comment 7 Michael Meeks 2016-02-17 21:35:08 UTC
Fixed in master and queued for -5-1 as:

https://gerrit.libreoffice.org/22443
    tdf#97922 - get control area right for spinbuttons.
https://gerrit.libreoffice.org/22444
    tdf#97922 - Mend nonsensical spin invalidation to improve rendering.

Thanks for filing =) turns out there is a rats nest of nonsense associated with this feature of the toolbar (sadly).
Comment 8 Commit Notification 2016-02-18 10:42:14 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2fb86ca5316bb5cd982ac9283fae0d9930c692c7&h=libreoffice-5-1

tdf#97922 - get control area right for spinbuttons.

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-02-18 10:44:26 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d7c06741967a84142bbe8fa8ae608e5e7df7b0f&h=libreoffice-5-1

tdf#97922 - Mend nonsensical spin invalidation to improve rendering.

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Meeks 2016-02-29 10:48:49 UTC
*** Bug 96656 has been marked as a duplicate of this bug. ***