tdf#97922 - get control area right for spinbuttons.

Also avoid caching both spin-buttons and some other complex types.
The cache key needs to be able to include more state.

Change-Id: I8eff6b1c5c51d27afb796cae66b45390433138b4